# Demo_1

./: CMakeLists.txt  Demo_1.guiguider
lv_drivers/: win_drv.h
lv_drivers/display/: GC9A01.h  ILI9341.h  R61581.h  SHARP_MIP.h  SSD1963.h  ST7565.h  UC1610.h  drm.h  fbdev.h  monitor.h
lv_drivers/gtkdrv/: gtkdrv.h
lv_drivers/indev/: AD_touch.h  FT5406EE8.h  XPT2046.h  evdev.h  keyboard.h  libinput_drv.h  mouse.h  mousewheel.h  xkb.h
lv_drivers/sdl/: sdl.c  sdl.h  sdl_gpu.h
lv_drivers/wayland/: wayland.h
lv_drivers/win32drv/: win32drv.h
lvgl-simulator/: lv_conf.h
lvgl/src/draw/: lv_draw.h  lv_draw_label.c  lv_draw_text.c  lv_draw_text.h  lv_draw_text_lexical_compiler.c  lv_draw_text_lexical_compiler.h
lvgl/src/extra/widgets/keyboard/: lv_zh_keyboard.c
lvgl/src/widgets/: lv_label.c  lv_textarea.c
main/src/: main.c
temp/: board.h  simulator.h
